--- a/public/game.html
+++ b/public/game.html
@@ -150,7 +150,12 @@
 	</table>
 
 	<div id="light" class="white_content">
-		<a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'" >Close</a>
+		<a href = "javascript:void(0)" onclick = "test()" >Close</a>
+		<script>
+			function test(){
+				document.getElementById('light').style.display='none';
+				document.getElementById('fade').style.display='none';
+		</script> 
 		<br></br>
 		<div id="picture" style="float:left;display:inline;"></div>
 		<div id="attr" style="float:left;display:inline;">
@@ -182,7 +187,7 @@
 			<p id= 'type'>Plant,Monster</p>
 			<p id= 'des'>des</p>
 		</div>
-</body>
+
 
 
 
@@ -256,7 +261,7 @@
 
 
 
-
+</body>
 
 
 
