homeapge button fix

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -82,19 +82,19 @@
     </tr>
 </table>
 
-<button id="create" class="float-left submit-button" >Create</button>
+<button id="PokeDex" class="float-left submit-button" >PokeDex</button>
 
 <script type="text/javascript">
-    document.getElementById("create").onclick = function () {
-        location.href = "https://stark-spire-21434.herokuapp.com";
+    document.getElementById("PokeDex").onclick = function () {
+        location.href = "https://stark-spire-21434.herokuapp.com/pokedex.html";
     };
 </script>
 
-<button id="join" class="float-left submit-button" >Join</button>
+<button id="Game" class="float-left submit-button" >Game</button>
 
 <script type="text/javascript">
-    document.getElementById("join").onclick = function () {
-        location.href = "https://stark-spire-21434.herokuapp.com";
+    document.getElementById("Game").onclick = function () {
+        location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
     };
 </script>
 
