--- a/public/game.html
+++ b/public/game.html
@@ -154,7 +154,7 @@
 		<script>
 			function test(){
 				document.getElementById('light').style.display='none';
-				document.getElementById('fade').style.display='none';
+				document.getElementById('fade').style.display='none';}
 		</script> 
 		<br></br>
 		<div id="picture" style="float:left;display:inline;"></div>
