--- a/public/homepage.html
+++ b/public/homepage.html
@@ -82,7 +82,7 @@
     </tr>
 </table>
 
-<button id="PokeDex" class="float-left submit-button" >PokeDex</button>
+<button id="PokeDex" class="float-left submit-button" >Poke</button>
 
 <script type="text/javascript">
     document.getElementById("PokeDex").onclick = function () {
