--- a/public/game.html
+++ b/public/game.html
@@ -156,7 +156,7 @@
 				// document.getElementById('light').style.display='none';
 				// document.getElementById('fade').style.display='none';}
 				$("#light").show();
-				$("#light").show();
+				$("#light").show(); }
 		</script> 
 		<br></br>
 		<div id="picture" style="float:left;display:inline;"></div>
