--- a/public/game.html
+++ b/public/game.html
@@ -195,12 +195,6 @@
 
 		<script >
 			function picture(n){
-				document.getElementById('picture').innerHTML='<img src="pokemon/'+n+'.png" weight="200%" height="200%">';
-
-				$("#light").hide();
-				$("#fade").hide();
-				// document.getElementById('light').style.display='block';
-				// document.getElementById('fade').style.display='block';
 
 				var name,hp,attk,def,sattk,sdef,spd,ht,wt,type,des;
 
@@ -231,7 +225,7 @@
 	                        $("type").html(type);
 	                        des=data.des;
 	                        $("des").html(des);
-	                        alert("success");
+	                        //alert("success");
 	                    }
 	                    else{
 	                        alert("fetch info eror");
@@ -249,7 +243,7 @@
 	                success:function(data){
 	                    if(data.status==0){
 	                        $("des").html(des);
-	                        alert("success");
+	                        //alert("success");
 	                    }
 	                    else{
 	                        alert("fetch des eror");
@@ -260,6 +254,12 @@
 	                }
 	            });
 
+				document.getElementById('picture').innerHTML='<img src="pokemon/'+n+'.png" weight="200%" height="200%">';
+
+				$("#light").hide();
+				$("#fade").hide();
+				// document.getElementById('light').style.display='block';
+				// document.getElementById('fade').style.display='block';
 
 			}
 		</script>
