--- a/public/game.html
+++ b/public/game.html
@@ -187,7 +187,7 @@
 			<p id='ht'>2.3 </p> <p>ft</p>
 			<p id= 'wt'>15.21 </p>  <p>lbs </p>
 			<p id= 'type'>Plant,Monster</p>
-			<p id= 'des'>des</p>
+	<!-- 		<p id= 'des'>des</p> -->
 		</div>
 
 
@@ -223,8 +223,9 @@
 	                        $("wt").html(wt);
 	                        type=data.type;
 	                        $("type").html(type);
-	                        des=data.des;
-	                        $("des").html(des);
+	                        
+	                        // des=data.des;
+	                        // $("des").html(des);
 	                        //alert("success");
 	                    }
 	                    else{
