--- a/public/game.html
+++ b/public/game.html
@@ -195,7 +195,7 @@
 
 		<script >
 			function picture(n){
-				document.getElementById('picture').innerHTML='<img src="pokemon/'+n+'.png" weight="200%" height="200%">';
+				// document.getElementById('picture').innerHTML='<img src="pokemon/'+n+'.png" weight="200%" height="200%">';
 
 				$("#light").hide();
 				$("#fade").hide();
