--- a/public/homepage.html
+++ b/public/homepage.html
@@ -86,7 +86,7 @@
 
 <script type="text/javascript">
     document.getElementById("create").onclick = function () {
-        location.href = "https://stark-spire-21434.herokuapp.com/pokedex,html";
+        location.href = "https://stark-spire-21434.herokuapp.com/pokedex.html";
     };
 </script>
 
