test pokeAPI and connect game with choose page1.1

--- a/public/choose.html
+++ b/public/choose.html
@@ -87,13 +87,13 @@
 	</table>
 	<script type="text/javascript">
 		function game(n){
-			if(n=="squirtle"){
+			if(n=="water"){
 				location.href = "https://stark-spire-21434.herokuapp.com/game/squirtle/index.html";
-			}else if(n=="pikachu"){
+			}else if(n=="electric"){
 				location.href = "https://stark-spire-21434.herokuapp.com/game/pikachu/index.html";
-			}else if(n=="bulbasaur"){
+			}else if(n=="grass"){
 				location.href = "https://stark-spire-21434.herokuapp.com/game/bulbasaur/index.html";
-			}else if(n=="charmander"){
+			}else if(n=="fire"){
 				location.href = "https://stark-spire-21434.herokuapp.com/game/charmander/index.html";
 			}else{
 				location.href = "https://stark-spire-21434.herokuapp.com/game/eevee/index.html";
