--- a/public/homepage.html
+++ b/public/homepage.html
@@ -85,7 +85,7 @@
 <button id="poke" class="float-left submit-button" >Poke</button>
 
 <script type="text/javascript">
-    document.getElementById("create").onclick = function () {
+    document.getElementById("poke").onclick = function () {
         location.href = "https://stark-spire-21434.herokuapp.com/pokedex.html";
     };
 </script>
