change choose.html's links

--- a/public/choose.html
+++ b/public/choose.html
@@ -88,13 +88,13 @@
 	<script type="text/javascript">
 		function game(n){
 			if(n=="water"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/squirtle/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/water/index.html";
 			}else if(n=="electric"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/pikachu/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/electric/index.html";
 			}else if(n=="grass"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/bulbasaur/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/grass/index.html";
 			}else if(n=="fire"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/charmander/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/fire/index.html";
 			}else{
 				location.href = "https://stark-spire-21434.herokuapp.com/game/eevee/index.html";
 			}
