api test  1.41 ht

--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -219,8 +219,8 @@
 	                        // $("#sdef").html(sdef);
 	                        // spd+=data.spd;
 	                        // $("#spd").html(spd);
-	                        // ht=data.ht;
-	                        // $("#ht").html(ht);
+	                        ht1=data.ht;
+	                        $("#ht").html(ht1);
 	                        wt1=data.wt;
 	                        $("#wt").html(wt1);
 	                        type1=data.type;
