api test  1.44 hp attk test

--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -168,11 +168,11 @@
 			<p>Sp Atk: </p>			
 		</div>
 		<div id="attr_data" style="float:left;display:inline;">
-			<p id='name'>45</p>
-			<p id='hp'>65</p>
-			<p id='attk'>49</p>
-			<p id='def'>49</p>
-			<p id='sattk'>45</p>
+			<p id='name'>0</p>
+			<p id='hp'>0</p>
+			<p id='attk'>0</p>
+			<p id='def'>0</p>
+			<p id='sattk'>0</p>
 		</div>
 		<div id="introduce" style="float:left;display:inline;">
 			<p>Height(ft): </p>
@@ -182,11 +182,11 @@
 			<p>Type:</p>
 		</div>
 		<div id="introduce_data" style="float:left;display:inline;">
-			<p id='ht'>2.3</p>
-			<p id= 'wt'>15.2</p>
-			<p id='sdef'>65</p>
-			<p id='spd'>10</p>
-			<p id= 'type'>Plant,Monster</p>
+			<p id='ht'>0</p>
+			<p id= 'wt'>0</p>
+			<p id='sdef'>0</p>
+			<p id='spd'>0</p>
+			<p id= 'type'>none</p>
 	<!-- 		<p id= 'des'>des</p> -->
 		</div>
 
@@ -209,8 +209,8 @@
 	                        $("#name").html(n);
 	                        hp1+=data.hp;
 	                        $("#hp").html(hp1);
-	                        // attk=+data.attk;
-	                        // $("#attk").html(attk);
+	                        attk1=+data.attk;
+	                        $("#attk").html(attk1);
 	                        // def+=data.def;
 	                        // $("#def").html(def);
 	                        // sattk+=data.sattk;
