api test  1.61 frontend api test

--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -167,7 +167,7 @@
 			<p>Defense: </p>
 			<p>Sp Atk: </p>			
 		</div>
-		<div id="attr_data" style="float:left;display: inline-flex;">
+		<div id="attr_data" style="float:left;display: inline;">
 			<p id='name'>0</p>
 			<p id='hp'>0</p>
 			<p id='attk'>0</p>
@@ -182,7 +182,7 @@
 			<p>Type:</p>
 		</div>  
 		<!-- disply inline for inputs below nad above -->
-		<div id="introduce_data" style="float:left;display: inline-flex;">
+		<div id="introduce_data" style="float:left;display: inline;">
 			<p id='ht'>0</p>
 			<p id= 'wt'>0</p>
 			<p id='sdef'>0</p>
