--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -209,17 +209,17 @@
 	                    if(data.status==0){
 	                        $("#name").html(n);
 	                        hp1+=data.hp;
-	                        $("#hp").text(hp1);
+	                        $("#hp").html(hp1);
 	                        attk1=+data.attk;
-	                        $("#attk").text(attk1);
-	                        def+=data.def;
-	                        $("#def").text(def);
-	                        sattk+=data.sattk;
-	                        $("#sattk").text(sattk);
-	                        sdef+=data.sdef;
-	                        $("#sdef").text(sdef);
-	                        spd+=data.spd;
-	                        $("#spd").text(spd);
+	                        $("#attk").html(attk1);
+	                        def1+=data.def;
+	                        $("#def").html(def1);
+	                        sattk1+=data.sattk;
+	                        $("#sattk").text(sattk1);
+	                        sdef1+=data.sdef;
+	                        $("#sdef").text(sdef1);
+	                        spd1+=data.spd;
+	                        $("#spd").text(spd1);
 	                        ht1=data.ht;
 	                        $("#ht").html(ht1);
 	                        wt1=data.wt;
