--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -209,17 +209,18 @@
 	                    if(data.status==0){
 	                        $("#name").html(n);
 	                        hp1+=data.hp;
-	                        $("#hp").html(hp1);
+	                       // $("#hp").html(hp1);
+	                        document.getElementById("hp").innerHTML=hp1;
 	                        attk1=+data.attk;
-	                        $("#attk").html(attk1);
+	                        //$("#attk").html(attk1);
 	                        def1+=data.def;
 	                        $("#def").html(def1);
 	                        sattk1+=data.sattk;
-	                        $("#sattk").text(sattk1);
+	                        $("#sattk").html(sattk1);
 	                        sdef1+=data.sdef;
-	                        $("#sdef").text(sdef1);
+	                        $("#sdef").html(sdef1);
 	                        spd1+=data.spd;
-	                        $("#spd").text(spd1);
+	                        $("#spd").html(spd1);
 	                        ht1=data.ht;
 	                        $("#ht").html(ht1);
 	                        wt1=data.wt;
