api test  1.62 frontend api hp attk test

--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -212,7 +212,7 @@
 	                       // $("#hp").html(hp1);
 	                        document.getElementById("hp").innerHTML=hp1;
 	                        attk1=data.attk;
-	                        //$("#attk").html(attk1);
+	                        $("#attk").html(attk1);
 	                        def1=data.def;
 	                        $("#def").html(def1);
 	                        sattk1=data.sattk;
