--- a/public/GM.html
+++ b/public/GM.html
@@ -37,11 +37,46 @@
   <h1>Game Manager</h1>
   <div id="GGM">
       <h2>Manage players</h2>
-      <form action="/search" method="post" >
-        <input type="text" id="gsearch" name="gsearch" placeholder="enter ID">
-        <input type="submit" value="Search" id="search" name="search">
-      </form>
+
+
+
+
+
+      <div action="/search" method="post" >
+        <input type="text" id="search_cri" name="search_cri" placeholder="enter ID">
+        <input type="submit" value="Search" id="gsearch" name="gsearch">
+      </div>
       
+    <script>
+        $("#gsearch").click(function(){
+            var search_cri=$("#search_cri").val();
+            $.ajax({
+                type:"post",
+                url:"/search",
+                data:{search_cri:search_cri},
+                success:function(data){
+                    if(data.status==0){
+                        alert("search success");
+                    }else if(data.status==-1){
+                        
+                    }else{
+                        alert("search fail");
+                    }
+                },
+                error:function(){
+                    alert("login error!");
+                }
+            })
+        });
+    </script>
+
+
+
+
+
+
+
+
 
       <table>
           <tr>
