--- a/public/GM.html
+++ b/public/GM.html
@@ -56,7 +56,7 @@
                 data:{search_cri:search_cri},
                 success:function(data){
                     if(data.status==0){
-                        alert("search success");
+                        alert(data.list);
                     }else if(data.status==-1){
                         
                     }else{
