--- a/public/GM.html
+++ b/public/GM.html
@@ -56,10 +56,12 @@
                 data:{search_cri:search_cri},
                 success:function(data){
 
-                    var obj=data.list[0];
-                    
+                    $("#user").html=data.list[0];
+                    $("#pass").html=data.list[1];
+                    $("#user").html=data.list[2];
+
                     if(data.status==0){
-                        alert(obj);
+                        alert("search success!");
                     }
 
                     else{
@@ -67,7 +69,7 @@
                     }
                 },
                 error:function(){
-                    alert("login error!");
+                    alert("search error!");
                 }
             })
         });
@@ -88,9 +90,9 @@
             <th>Age</th>
           </tr>
           <tr>
-            <th>read</th>
-            <th>read</th>
-            <th>read</th>
+            <th id ="user">read</th>
+            <th id = "pass">read</th>
+            <th id = "name ">read</th>
           </tr>
       </table>
       <br></br>
