--- a/public/GM.html
+++ b/public/GM.html
@@ -96,15 +96,18 @@
 
         $("#gsearch").click(function(){
             var search_cri=$("#search_cri").val();
+            var user1,pass1,name1;
             $.ajax({
                 type:"post",
                 url:"/search",
                 data:{search_cri:search_cri},
                 success:function(data){
-
-                    $("#user").html=data.list[0];
-                    $("#pass").html=data.list[1];
-                    $("#user").html=data.list[2];
+                    user1=data.list[0].id;
+                    $("#user").html=user1;
+                    pass1=data.list[0].password;
+                    $("#pass").html=pass1;
+                    name1=data.list[2].name;
+                    $("#name").html=name1;
 
                     if(data.status==0){
                         alert("search success!");
