--- a/public/GM.html
+++ b/public/GM.html
@@ -103,7 +103,9 @@
                 data:{search_cri:search_cri},
                 success:function(data){
                     user1=data.list[0].id;
-                    $("#user").html=user1;
+                    //$("#user").html=user1;
+                    document.getElementById("user").innerHTML=user1;
+
                     pass1=data.list[0].password;
                     $("#pass").html=pass1;
                     name1=data.list[2].name;
