--- a/public/GM.html
+++ b/public/GM.html
@@ -105,7 +105,7 @@
                       if(data.status==0){
                       //$("#user").html=user1;
                       document.getElementById("user").innerHTML="233";
-                      document.getElementById("pass").innerHTML=data.list[0].password;
+                      document.getElementById("pass").innerHTML=data.list[0].pass;
                       document.getElementById("name").innerHTML=data.list[0].name;
                       alert("search success!");
                     }
