--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -166,7 +166,7 @@
 			<p>Attack: </p>
 			<p>Defense: </p>
 			<p>Sp Atk: </p>	
-			<p>Description: </p>			
+			<!-- <p>Description: </p> -->			
 		</div>
 		<div id="attr_data" style="float:left;display: inline;">
 			<p id='name'>0</p>
@@ -174,7 +174,6 @@
 			<p id='attk'>0</p>
 			<p id='def'>0</p>
 			<p id='sattk'>0</p>
-			<p id= 'des'>des</p>
 		</div>
 		<div id="introduce" style="float:left;display:inline;">
 			<p>Height(ft): </p>
@@ -191,8 +190,11 @@
 			<p id='spd'>0</p>
 			<p id= 'type'>none</p>
 		</div>
-
-
+		<div id="Description" >
+			<p>Description: </p>
+			<p id= 'des'>dddddddddddddddeeeeeeeeeewwwwwwwwwwwwwwwwwwwwwwwwrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrreeeeeeeeeeeeee</p>
+		</div>
+	</div>
 
 
 		<script >
