--- a/public/GM.html
+++ b/public/GM.html
@@ -104,7 +104,8 @@
                 success:function(data){
                       if(data.status==0){
                       //$("#user").html=user1;
-
+                      var table=document.getElementById('userlist');
+                      table.firstChild.removeNode(true)''
                       for(i=0;i<data.list.length;i++){
                         var tr=document.createElement("tr");
                         var td1=document.createElement("td");
@@ -119,10 +120,9 @@
                         tr.appendChild(td2);
                         tr.appendChild(td3);
 
-                        var table=document.getElementById('userlist');
                         table.appendChild(tr);
                       }
-                      //document.getElementById("user").innerHTML=data.list[0].user;
+                      document.getElementById("user").innerHTML=data.list[0].user;
                       
                       //alert("search success!");
                     }
