--- a/public/GM.html
+++ b/public/GM.html
@@ -105,7 +105,7 @@
                       if(data.status==0){
                       //$("#user").html=user1;
                       var table=document.getElementById('userlist');
-                      table.firstChild.removeNode(true)''
+                      table.firstChild.removeNode(true);
                       for(i=0;i<data.list.length;i++){
                         var tr=document.createElement("tr");
                         var td1=document.createElement("td");
